
5.2b1 -> 5.3a1
    - jbj: qf: add --wdj:srpm query format template.
    - jbj: add api-sanity-autotest.pl (GPL->LGPLv2 expected on next release).
    - jbj: _RequestPass: convert assert to returning "" if no password.
    - jbj: mireRegexec: return -1 error instead of segfault when mis-used.
    - jbj: argv: use stricter RPMstr_t/RPMint_t types instead of void *.
    - devzero2000: add an rpm-arg-max-doc.spec toy test spec in tests
    - proyvind: python: make sure that we always use our own rpm build and
	macros.
    - proyvind: filetriggers: don't pass filename as argument to scripts,
	(all) filenames are passed through stdin already.
    - rpm.org: swipe Tarjan's loopy scissors for hacking.
    - jbj: rpmts: add pluggable check/order/run method vectors.
    - jbj: hkp: add keys.rpm5.org as the default pubkey server.
    - jbj: fix: split NV iff V starts with digit string in lookupPackage().
    - jbj: fix: remove the inheirited %description before adding explicitly.
    - jbj: use a Bloom filter so that build sanity checks scale.
    - jbj: fix rpmInstallSourcePackage() refcnts and memory leaks.
    - jbj: fix: don't segfault on --rebuild. the better fix is to eliminate
	rpmInstallSourcePackage() entirely, todo++.
    - jbj: rpmio: teach rpmGetPath() to append explicit pesky trailing '/'.
    - jbj: hrmib: fix: add lazy Mkdir to instantiate in chroot's.
    - jbj: begin to finalize upgrade fingerprint handling.
    - jbj: satsify Requires: / internally & always, SuSE doesn't package "/".
    - jbj: change rpmlib(PayloadIsLzma) version from 4.4.6 -> 4.4.2 a la SuSE.
    - jbj: rpmts: refactor rpmtsRun() into smaller routines a la rpm.org.
    - bero: rpm4compat.h: Adjust to changes in the rest of rpm5
    - jbj: rpmdb: refactor dbiSync as internal per-table, eliminate rpmdbSync.
    - jbj: rpmbf: fix: return -1 error on NULL pointers.
    - jbj: gpsee: finish refactoring gsr -> rpmjs.c.
    - jbj: gpsee: more refactoring gsr -> rpmjs.c.