@@ -34,6 +34,7 @@ interplist=
 perllist=
 pythonlist=
 tcllist=
+rubygemlist=`echo "$filelist"| egrep "\.gemspec$"`
 
 #
 # --- Alpha does not mark 64bit dependencies
@@ -133,5 +134,10 @@ done | sort -u
 # --- Tcl modules.
 [ -x "$usrlibrpm/tcl.req" -a -n "$tcllist" ] && \
     echo $tcllist | tr '[:blank:]' \\n | "$usrlibrpm/tcl.req" | sort -u
+
+#
+# --- Ruby gems
+[ -x "$usrlibrpm/rubygems.rb" -a -n "$rubygemlist" ] &&
+    echo $rubygemlist | tr '[:blank:]' \\n | "$usrlibrpm/rubygems.rb" --requires | sort -u
 
 exit 0
